calendar fixed bc of fix me button css, clocks now overlap briefly, need to work on check box strikethrough

--- a/now3.css
+++ b/now3.css
@@ -112,11 +112,11 @@ div.menu ul{
  color: black;
 }
 
-#list li:active{
-   background: #888;
-   color: #fff;
-   text-decoration: line-through;
+input[type=checkbox]{
+  margin-right: 10px;
+  background: black;
 }
+
 
 .addBtn {
    padding: 10px;
@@ -129,7 +129,7 @@ div.menu ul{
    font-size: 16px;
    cursor: pointer;
    transition: 0.3s;
-   margin-right: 15px;
+   margin-right: 23px;
    font-family: 'Raleway', sans-serif;
 }
 
@@ -375,6 +375,16 @@ div.menu ul{
  color: #D9D3D3;
 }
 
+/*button code fixed the weird calendar thing!!!!*/
+#myButton{
+  background: #D5D5D5;
+  border: .5px solid #c1c1c1;
+  font-family: 'Raleway', sans-serif;
+  width: 10%;
+  margin-left: 44.5%;
+  margin-right: 44.5%;
+}
+
 @media only screen and (max-width: 1255px) and (min-width: 881px){
 
   #clock{
@@ -397,7 +407,7 @@ div.menu ul{
   }
 
   #clock2{
-    margin-left: 60%;
+    margin-right: 60%;
   }
 
   .up2{
